--- a/pages/styles/homePage.css
+++ b/pages/styles/homePage.css
@@ -151,7 +151,7 @@ nav ul li a:hover {
 .content-card {
     background-color: var(--white-30);
     backdrop-filter: blur(3px);
-    padding: 2rem;
+    padding: 0.3rem;
     border: 2px solid rgba(255, 255, 255, 0.18);
     border-radius: 10px;
     text-align: start; /* Alterado de 'center' para 'start' para o texto do parágrafo */
@@ -189,7 +189,6 @@ nav ul li a:hover {
     font-family: "Omori-Font";
     font-size: 5rem;
     font-weight: 500;
-    margin-bottom: 1.5rem;
 }
 
 .content-card p {
@@ -273,11 +272,18 @@ nav ul li a:hover {
 #blackspace-content .content-card {
     text-align: center;
     position: absolute;
+
 }
 
-#blackspace-content #blackspace-section { bottom: 80%; }
-#blackspace-content section:nth-of-type(2) { bottom: 50%; }
-#blackspace-content section:nth-of-type(3) { bottom: 15%; }
+#blackspace-content #blackspace-section { 
+    bottom: 80%; 
+}
+#blackspace-content section:nth-of-type(2) { 
+    bottom: 50%; 
+}
+#blackspace-content section:nth-of-type(3) { 
+    bottom: 15%; 
+}
 
 #blackspace-content figure {
     width: 100%;
